# shared

./: flake.nix
ai-commit/: flake.nix  pyproject.toml
ai-commit/src/ai_commit/: __init__.py
modules/: bash.nix  btop.nix  delta.nix  lazygit.nix  lazysql.nix  litecli.nix  neovim.nix  opencode.nix  packages.nix  shell-tools.nix  starship.nix  tmux.nix  usql.nix  yazi.nix
nvim/: lazy-lock.json  lazyvim.json
nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
nvim/lua/plugins/: basedpyright.lua  bookmarks-nvim.lua  dap.lua  diffview.lua  disable-mason.lua  image.lua  iron.lua  jsonls.lua  lazygit.lua  lualine.lua  markview.lua  (+8 more)
nvim/snippets/: markdown.json
opencode/: opencode-lsp.json  tui.json
opencode/agents/: research-ach.md  research-agent-loop.md  research-alternative-futures.md  research-coverage-audit.md  research-cynefin.md  research-debug.md  research-decision-record.md  research-design.md  research-first-principles.md  research-hilp.md  research-intelligence.md  research-inversion.md  research-investigation.md  research-io-uncertainty-quadrant.md  research-link-analysis.md  research-microservices.md  research-negotiate.md  research-ooda.md  research-polya.md  research-ppdac.md  research-premortem.md  research-red-team.md  research-scientific.md  research-systems-thinking.md  research-testing.md  research-toc.md  research-triz.md  research-wrap.md  router.md
overlays/lazygit/: default.nix  remove-donate-links.patch
overlays/tmux/: clean-tree-lines.patch  default.nix
scripts/: ai-commit.sh  tmux-sessionizer.sh  with-secrets.nix
(+33 files in other folders)
