[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit"
version = "0.1.0"
description = "AI-powered conventional commit message generator using pydantic-ai"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai]",
]

[project.scripts]
ai-commit = "ai_commit:main"

[tool.setuptools]
packages = ["ai_commit"]
package-dir = {"" = "src"}
